--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Discord</title>
 </head>
 <body>
+    <!-- header -->
+    <header>
+        <!-- div container -->
+        <div class="container_header">
+            <!-- row -->
+            <div class="row_header">
+                <!-- tre colonne con logo, link e login -->
+                <div class="col_25 logo">logo</div>
+                <div class="col_50">link link link link link</div>
+                <div class="col_25 login">login</div>
+            </div>
+        </div>
+    </header>
+    <main></main>
 </body>
 </html>
