create section 1,2,3 e 4 di Main

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Discord</title>
 </head>
 <body>
-    <!-- header -->
+    <!-- HEADER -->
     <header>
         <!-- div container -->
         <div class="container_header">
@@ -22,6 +22,43 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <!-- MAIN -->
+    <main>
+        <!-- section 1 -->
+        <section class="section_1">
+            <div class="container_section_1">
+                <div class="row_section_1">
+                    <div class="col_section_1"></div>
+                </div>
+            </div>
+        </section>
+        <!-- section 2 -->
+        <section class="section_2">
+            <div class="container_section_2">
+                <div class="row_section_2">
+                    <div class="col_section_2_left"></div>
+                    <div class="col_section_2_right"></div>
+                </div>
+            </div>
+        </section>
+        <!-- section 3 -->
+        <section class="section_3">
+            <div class="container_section_3">
+                <div class="row_section_3">
+                    <div class="col_section_3_left"></div>
+                    <div class="col_section_3_right"></div>
+                </div>
+            </div>
+        </section>
+        <!-- section 4 -->
+        <section class="section_4">
+            <div class="container_section_4">
+                <div class="row_section_4">
+                    <div class="col_section_4_left"></div>
+                    <div class="col_section_4_right"></div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
