Creata section 5. Main completato

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                 </div>
             </div>
         </section>
+        <!-- section 5 -->
+        <section class="section_5">
+            <div class="container_section_5">
+                <div class="row_section_5">
+                    <div class="col_section_5"></div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
