Footer completato: Creato foter con 2 sezioni. Esercizio finito ma da ottimizzare

--- a/index.html
+++ b/index.html
@@ -68,5 +68,29 @@
             </div>
         </section>
     </main>
+    <!-- FOOTER -->
+    <footer>
+        <!-- section 1 -->
+        <section class="section_footer_1">
+            <div class="container_section_footer_1">
+                <div class="row_section_footer_1">
+                    <div class="col_section_footer_1"></div>
+                    <div class="col_section_footer_2"></div>
+                    <div class="col_section_footer_3"></div>
+                    <div class="col_section_footer_4"></div>
+                    <div class="col_section_footer_5"></div>
+                </div>
+            </div>
+        </section>
+        <!-- section 2 -->
+        <section class="section_footer_2">
+            <div class="container_section_footer_2">
+                <div class="row_section_footer_2">
+                    <div class="col_section_bottom_footer_1">Logo</div>
+                    <div class="col_section_bottom_footer_2">Bottone</div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
